--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
+    "serverless-http": "^4.0.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
